# soft-view

./: CMakeLists.txt  README.md
src/: main.cpp
